--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
-async function fetchPlayerRank() {
-    const apiUrl = "https://api.rivalstracker.com/api/player/2118492390?season=2";
-    const rankMapping = {
-        1: "Bronze 1", 2: "Bronze 2", 3: "Bronze 3",
-        4: "Silver 1", 5: "Silver 2", 6: "Silver 3",
-        7: "Gold 1", 8: "Gold 2", 9: "Gold 3",
-        10: "Platinum 1", 11: "Platinum 2", 12: "Platinum 3",
-        13: "Diamond 1", 14: "Diamond 2", 15: "Diamond 3",
-        16: "Grandmaster 1", 17: "Grandmaster 2", 18: "Grandmaster 3",
-        19: "Celestial 1", 20: "Celestial 2", 21: "Celestial 3",
-        22: "Eternity", 23: "One Above All"
-    };
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rank Tracker</title>
+</head>
+<body>
+    <h1>Player's Rank</h1>
+    <div id="rank-info">Loading rank data...</div>
 
-    try {
-        const response = await fetch(apiUrl);
-        const data = await response.json();
-        const latestMatch = data.rank_history[0]; // Get the latest match
-        const newLevel = latestMatch.rank.new_level;
-        const rankName = rankMapping[newLevel];
-        const newScore = latestMatch.rank.new_score.toFixed(2);
-        const scoreChange = latestMatch.rank.add_score.toFixed(2);
+    <script>
+        async function fetchPlayerRank() {
+            const apiUrl = "https://api.rivalstracker.com/api/player/2118492390?season=2";
+            const rankMapping = {
+                1: "Bronze 1", 2: "Bronze 2", 3: "Bronze 3",
+                4: "Silver 1", 5: "Silver 2", 6: "Silver 3",
+                7: "Gold 1", 8: "Gold 2", 9: "Gold 3",
+                10: "Platinum 1", 11: "Platinum 2", 12: "Platinum 3",
+                13: "Diamond 1", 14: "Diamond 2", 15: "Diamond 3",
+                16: "Grandmaster 1", 17: "Grandmaster 2", 18: "Grandmaster 3",
+                19: "Celestial 1", 20: "Celestial 2", 21: "Celestial 3",
+                22: "Eternity", 23: "One Above All"
+            };
 
-        // Build the response
-        return `Player's rank: ${rankName} (Level ${newLevel}) | Score: ${newScore} | Change: ${scoreChange}`;
-    } catch (error) {
-        console.error("Error fetching rank data:", error);
-        return "Failed to fetch rank data.";
-    }
-}
+            try {
+                const response = await fetch(apiUrl);
+                const data = await response.json();
+                const latestMatch = data.rank_history[0];
+                const newLevel = latestMatch.rank.new_level;
+                const rankName = rankMapping[newLevel];
+                const newScore = latestMatch.rank.new_score.toFixed(2);
+                const scoreChange = latestMatch.rank.add_score.toFixed(2);
 
-// Serve the response for StreamElements
-fetchPlayerRank().then(response => {
-    document.body.textContent = response;
-});
+                // Insert the data into the page
+                document.getElementById('rank-info').textContent = 
+                    `Player's rank: ${rankName} (Level ${newLevel}) | Score: ${newScore} | Change: ${scoreChange}`;
+            } catch (error) {
+                document.getElementById('rank-info').textContent = "Failed to fetch rank data.";
+                console.error("Error fetching rank data:", error);
+            }
+        }
+
+        // Fetch the rank data on page load
+        fetchPlayerRank();
+    </script>
+</body>
+</html>
